--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/eslint-parser": "^7.18.2",
+    "@paypal/react-paypal-js": "^7.8.1",
+    "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
+    "dotenv-webpack": "^7.1.0",
     "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -32,7 +35,9 @@
     "eslint-plugin-react": "^7.30.0",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-leaflet": "^4.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
