--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.3.0"
   },
